bin updated