@@ -35,7 +35,6 @@ if exist "%PARENT_DIR%\bin\Console.bat" (
 :BAD_HOME
 @REM ---------------------------------------------------------------------------
 
-echo OASE_HOME is set to %OASE_HOME%
 echo OASE_HOME environment variable is not set or points to the wrong directory.
 echo Please set OASE_HOME correctly and launch CAR OSGi again.
 set ERRORLEVEL=1
@@ -47,14 +46,21 @@ goto EXIT
 @REM ---------------------------------------------------------------------------
 
 set JAVA=java
-set JAVA_OPTS=
+set JAVA_OPTS=-Xms32M -Xmx128M
+
 if exist "%JAVA_HOME%\bin\java.exe" (
 	set JAVA="%JAVA_HOME%\bin\java.exe"
 	if exist "%JAVA_HOME%\bin\server\jvm.dll" (
 		set "JAVA_OPTS=-server"
 	)
 )
-set JAVA_OPTS=%JAVA_OPTS% -Xms32M -Xmx128M
+set JAVA_OPTS=%JAVA_OPTS% --add-modules=ALL-SYSTEM
+set JAVA_OPTS=%JAVA_OPTS% --add-opens=java.base/java.lang=ALL-UNNAMED
+set JAVA_OPTS=%JAVA_OPTS% --add-opens=java.base/java.util=ALL-UNNAMED
+set JAVA_OPTS=%JAVA_OPTS% --add-opens=java.base/java.time=ALL-UNNAMED
+set JAVA_OPTS=%JAVA_OPTS% --add-opens=java.base/java.nio=ALL-UNNAMED
+set JAVA_OPTS=%JAVA_OPTS% -XX:MaxMetaspaceSize=128m
+set JAVA_OPTS=%JAVA_OPTS% -Dsun.net.inetaddr.ttl=60
 
 if "%1" == "debug" (
    set JAVA_OPTS=%JAVA_OPTS% -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005
@@ -64,7 +70,8 @@ if "%1" == "debug" (
 @REM Setup Classpath
 @REM ---------------------------------------------------------------------------
 
-set "CLASSPATH=lib\*"
+set "CLASSPATH=lib\org.eclipse.osgi-3.21.0.jar"
+set "CLASSPATH=%CLASSPATH%;lib\*"
 set "CLASSPATH=%CLASSPATH%;configuration"
 
 @REM ---------------------------------------------------------------------------
@@ -78,9 +85,7 @@ set "CLASSPATH=%CLASSPATH%;configuration"
 @REM ---------------------------------------------------------------------------
 
 echo OASE_HOME      is set to %OASE_HOME%
-echo JAVA_HOME      is set to %JAVA_HOME%
 echo JAVA           is set to %JAVA%
-echo JAVA_OPTS      is set to %JAVA_OPTS%
 echo CLASSPATH      is set to %CLASSPATH%
 echo USER_ARGS      is set to %USER_ARGS%
 echo:
